tests/e2e/string_templates_path_error3.error
Error: syntax error in story at line 1, column 7

1|    c = "{2 / true}"
            ^

E0103: `int` is not compatible with `boolean`
